# corazon

./: .eslintrc.json  .gitignore  Cargo.toml  README.md  nx.json  package.json  pnpm-lock.yaml
crates/products-poller/: .env.example  Cargo.toml
crates/products-poller/src/: main.rs
prisma/: schema.prisma
