[package]
name = "products-poller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.15", features = ["json"] }
tokio = { version = "1.26.0", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
dotenv = "0.15.0"
url = "2.3.1"
